--- a/notebooks/example/analysis.ipynb
+++ b/notebooks/example/analysis.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z_anc = [f\"Z{i}\" for i in range(1, 5)]\n",
+    "z_anc = [\"Z1\", \"Z2\", \"Z3\", \"Z4\"]\n",
     "sel_defects = defects.sel(anc_qubit=z_anc)\n",
     "defects_vec = sel_defects.stack(node=(\"anc_qubit\", \"qec_round\"))\n",
     "\n",
